--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_MOVIE_DB_API_KEY=b18e798ff377ef49f1c335283e7c43d6
-PUBLIC_URL=https://ezenbhy.github.io/react-netflix-app/
+# PUBLIC_URL=https://ezenbhy.github.io/react-netflix-app/
